# ProgettoCorsoFollowMe

./: .gitignore  AUTHORS  CHEATSHEET  CMakeLists.txt  Demo_Detection.cpp  MyLib.cpp  MyLib.hpp  README.md  config.ini  fundamental.cpp  gesture.cpp  install opencv  main.cpp  marker.cpp  markerVideo.cpp  people_state_machine.cpp  peopledect.cpp  person.cpp  person.hpp  plane.ply  sac.cpp  test.cpp  test4_downsampled.ply
AcquisitionLib/: CMakeLists.txt  acq_lib.cpp  acq_lib.h  config_m.ini  config_mm_.ini  main.cpp
AcquisitionLib/Old/: acq_lib.cpp  acq_lib.h
AcquisitionLib/lib/: followme.h  rs_stream.cpp  rs_stream.h  utils.cpp  utils.h
Control+Plane/: CMakeLists.txt  config.ini  config_chess.ini  config_m.ini  config_mm_.ini
Control+Plane/Old/lib/: configurator.h  followme.h  rs_stream.cpp  segmentation.cpp  segmentation.h
Control+Plane/src/: main.cpp  main_for_htop.cpp  main_ply.cpp  seg.cpp
Control+Plane/src/lib/: configurator.cpp  configurator.h  control.cpp  control.h  followme.h  interface.cpp  interface.h  rs_stream.cpp  rs_stream.h  segmentation.cpp  segmentation.h  utils.cpp  utils.h
Control+Plane2/: config.ini
Control+Plane2/src/lib/: configurator.cpp  control.cpp  control.h  interface.h  rs_stream.h
Detection_demo/: CMakeLists.txt  config.ini
Detection_demo/src/: Demo_Detection.cpp
Detection_demo/src/lib/: configurator.cpp
GestureRecognition_demo/: CMakeLists.txt  gesture.cpp
PathPlanning_demo/: CMakeLists.txt
PathPlanning_demo/src/: main.cpp
PathPlanning_demo/src/lib/: PathPlanning.cpp  PathPlanning.h  followme.h  interface.cpp  interface.h  rs_stream.cpp  segmentation.h
State_Machine_demo/: CMakeLists.txt  config.ini  config2.ini
State_Machine_demo/src/: Demo_Detection.cpp  people_state_machine.cpp  peopledect.cpp
State_Machine_demo/src/lib/: person.cpp  person.h
TargetIdentification_demo/: CMakeLists.txt  markerVideo.cpp
Visu_from_dataset/: CMakeLists.txt  main.cpp
convert/: CMakeLists.txt  rs-convert
src/: main.cpp  main_with_while.cpp  people_state_machine.cpp  statemachine_sample.cpp
src/lib/: configurator.cpp  configurator.h  followme.h  person.cpp  segmentation.cpp  segmentation.h  utils.cpp  utils.h  visualizers.cpp  visualizers.h
test_realsense/: CMakeLists.txt  main.cpp
